--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,9 +11,10 @@ configuration:
 before_build:
   - mkdir build
 
-build:
-  - cd build
-  - echo "Building CEF..."
-  - python ../tools/automate.py --build-cef --ninja-jobs 4
-  - echo "Building CEF Python..."
-  - python ../tools/build.py 58.0
+build_script:
+- cmd: >-
+    cd build
+    echo "Building CEF..."
+    python ../tools/automate.py --build-cef --ninja-jobs 4
+    echo "Building CEF Python..."
+    python ../tools/build.py 58.0
