--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,11 @@ os: Visual Studio 2015
 configuration:
   - Release
 
+environment:
+  - PYTHON: "C:\\Python270-x64"
+
 install:
+  - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
   - pip install docopt
 
 before_build:
