--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,7 @@ environment:
 install:
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
   - pip install --upgrade -r tools/requirements.txt
-  - ps: Start-FileDownload 'http://opensource.spotify.com/cefbuilds/cef_binary_%CEF_VERSION%_windows64.tar.bz2'
+  - ps: Start-FileDownload 'http://opensource.spotify.com/cefbuilds/cef_binary_$CEF_VERSION_windows64.tar.bz2'
 
 before_build:
   - mkdir build
