--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,6 +17,7 @@ install:
 before_build:
   - mkdir build
   - 7z x cef_binary_3.3029.1604.g364cd86_windows64.tar.bz2 -obuild
+  - dir build
 
 build_script:
   - cd build
