--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,11 +20,11 @@ before_build:
   - mkdir build
   - 7z x cef_binary_3.3029.1604.g364cd86_windows64.tar.bz2
   - 7z x cef_binary_3.3029.1604.g364cd86_windows64.tar -obuild
-  - dir build
+  - copy src/windows/py27/stdint.h "%LocalAppData%\Programs\Common\Microsoft\Visual C++ for Python\9.0\VC\include"
 
 build_script:
-  - cd build
-  - echo "Put prebuilt CEF in place..."
-  - python ../tools/automate.py --prebuilt-cef
-  - echo "Building CEF Python..."
-  - python ../tools/build.py 58.0
+#  - cd build
+#  - echo "Put prebuilt CEF in place..."
+#  - python ../tools/automate.py --prebuilt-cef
+#  - echo "Building CEF Python..."
+#  - python ../tools/build.py 58.0
